<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <!-- Loading View -->
    <ProgressBar android:id="@+id/loadingView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:indeterminate="true"
                 tools:ignore="UnusedIds"/>

    <!-- Content View -->
    <android.support.v4.widget.SwipeRefreshLayout android:id="@+id/contentView"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView android:id="@+id/posts_fragment__posts_recycler_view"
                                                android:layout_width="match_parent"
                                                android:layout_height="match_parent"
                                                app:layoutManager="android.support.v7.widget.StaggeredGridLayoutManager"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <!-- Error View -->
    <TextView android:id="@+id/errorView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:ignore="UnusedIds,SelectableText"/>

</FrameLayout>
